--- a/estilo.css
+++ b/estilo.css
@@ -7,7 +7,7 @@
   
   body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(./imagenes/Fondos\ de\ Pantalla\ Gratis\ Abstractos\ \(164\).png);
+    background-image: url(./imagenes/polygon-art-color-line-wallpaper-preview.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
