--- a/estilo.css
+++ b/estilo.css
@@ -11,13 +11,13 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 16px;
     font-weight: bold;
   }
   
   a {
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
   }
   
