--- a/estilo.css
+++ b/estilo.css
@@ -58,7 +58,7 @@
   }
   
   .nav-main ul li a:hover {
-    border-bottom: 2px solid #fff;
+    border-bottom: 5px solid rgb(174, 0, 255);
   }
   
   .nav-main ul.nav-menu {
