--- a/estilo.css
+++ b/estilo.css
@@ -347,6 +347,13 @@
     border: 5px solid black;
   }
   
+ .integrantes3 {
+    display: grid;
+    gap: 25px; /*Colocamos la separacion que tendra entre los elementos*/
+    margin: 10px 0;
+   
+  }
+  
   .integrantes img {
     width: 35%;
     height: 200px;
@@ -357,6 +364,12 @@
     width: 100%;
     height: 350px;
     
+  }
+  .integrantes3 img {
+    width: 50%;
+    height: 400px;
+    border: 5px solid black;
+    margin-left: 350px; 
   }
   
   .integrantes h3{
